mob autoroll (standard values set on mob level entry)
checkload (list where a mob/obj/trg is loaded)
Auto Toggles (loot, gold, split, sac, assist, map, door, key)
Hidden mob/obj
mob/obj stacking
hindex
helpcheck
OLC copy and delete options.
export (QQ's a zone into a tarball)
Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
(lots of major bugfixes too)
@
tbaMUD 3.61
[Mar 17 2010] - Fizban
  Made non-existant objects in pfiles be skipped instead of crashing the MUD (thanks drefs)
[Feb 13 2010] - Rumble
  Removed delete object option in oedit menu.
[Feb 08 2010] - Rumble
  Added another define for Windows MSVC users to hide useless warnings. (thanks Kyle)
  Added CIRCLE_WINDOWS check for tell m-w usage of getpid(). (thanks Kyle)
  Changed zcheck to ignore object type TRASH when checking for a cost of 0.
  Changed teleport level to LVL_BUILDER.
[Jan 27 2010] - Rumble
  Updated World (thanks Parna) and other text files for release.
[Jan 18 2010] - Fizban
  Edited scuba check so immortals with nohassle on don't need one.
[Jan 18 2010] - Rumble
  Fixed bad AFF_SCUBA check for underwater rooms.
[Dec 28 2009] - Rumble
  Fixed bug where an immortal could cast 'invis' and then be unable to break it with vis.
[Dec 25 2009] - Rumble
  Added new mob flag NOKILL.
[Dec 23 2009] - Rumble
  Added zone flags and min/max level to show zone # and stat zone #.
  Changed show zone # reset mode from a # to the actual string description.
  Changed Message Type on stat object from a number to the actual message type. i.e. pierce.
[Dec 22 2009] - Rumble
  Made copyover save loadroom so players stay in the same room during copyover.
  Added scan command.
[Dec 21 2009] - Rumble
  Added identify command to shops.
  Moved identify to an active spell. Cleric 11, Mage 20.
[Dec 17 2009] - Rumble
  Standardized /n/r to /r/n in ibt.c
  Removed ability to set a modifier to obj apply NONE.
[Dec 16 2009] - Rumble
  Added some missing code for last_ibt in ibt.c.