@@ -308,7 +308,7 @@ void generic_complete_quest(struct char_data *ch)
             QST_GOLD(rnum));
     }
     if (QST_EXP(rnum)) {
-      gain_exp(ch, QST_GOLD(rnum));
+      gain_exp(ch, QST_EXP(rnum));
       send_to_char(ch,
             "You have been awarded %d experience points for your service.\r\n",
             QST_EXP(rnum));
